Bug 407111. Correctly set whether a break opportunity after non-text content fits. r+sr=dbaron,a=schrep