layout/generic/nsLineLayout.h
@@ -250,8 +250,8 @@ public:
    */
   PRBool NotifyOptionalBreakPosition(nsIContent* aContent, PRInt32 aOffset,
                                      PRBool aFits) {
-    NS_ASSERTION(!GetFlag(LL_NEEDBACKUP),
-                  "Shouldn't be updating the break position after we've already flagged an overrun");
+    NS_ASSERTION(!aFits || !GetFlag(LL_NEEDBACKUP),
+                  "Shouldn't be updating the break position with a break that fits after we've already flagged an overrun");
     // Remember the last break position that fits; if there was no break that fit,
     // just remember the first break
     if (aFits || !mLastOptionalBreakContent) {
@@ -518,7 +518,8 @@ protected:
                        PRBool aFrameCanContinueTextRun,
                        PRBool aCanRollBackBeforeFrame,
                        nsHTMLReflowMetrics& aMetrics,
-                       nsReflowStatus& aStatus);
+                       nsReflowStatus& aStatus,
+                       PRBool* aOptionalBreakAfterFits);
 
   void PlaceFrame(PerFrameData* pfd,
                   nsHTMLReflowMetrics& aMetrics);
@@ -534,7 +535,6 @@ protected:
   void RelativePositionFrames(PerSpanData* psd, nsRect& aCombinedArea);
 
   PRBool TrimTrailingWhiteSpaceIn(PerSpanData* psd, nscoord* aDeltaWidth);
-
 
   void ComputeJustificationWeights(PerSpanData* psd, PRInt32* numSpaces, PRInt32* numLetters);
 
